--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0-alpha.35",
+    "@vuelidate/validators": "^2.0.0-alpha.27",
     "core-js": "^3.8.3",
+    "vee-validate": "^4.5.10",
     "vue": "^2.6.14",
+    "vuelidate": "^0.7.7",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
